@@ -34,9 +34,12 @@ plugin.tx_srfreecap_pi2 {
 
 	salutation = {$plugin.tx_srfreecap.salutation}
 	accessibleOutput = {$plugin.tx_srfreecap.accessibleOutput}
+	accessibleOutputImage = {$plugin.tx_srfreecap.accessibleOutputImage}
 
 	_CSS_DEFAULT_STYLE (
-		.tx-srfreecap-pi2-image { margin-left: 1em; }
+		img.tx-srfreecap-pi2-image { margin-left: 1em; margin-right: 1em; vertical-align: middle; }
+		.tx-srfreecap-pi2-accessible-image { vertical-align: middle; }
+		.tx-srfreecap-pi2-accessible-link { width: 10em; float: right; vertical-align: middle; margin-right: 7em;}
 		.tx-srfreecap-pi2-cant-read { font-size: .9em; color:#35006d; }
 		.tx-srfreecap-pi2-cant-read a:link { background-color:transparent; font-weight:bold; text-decoration:none; }
 	)
