@@ -19,6 +19,12 @@
             <label index="click_here_informal">click here</label>
 	    <label index="click_here_accessible">Click here for audio version of the word to enter.</label>
 	    <label index="click_here_accessible_informal">Click here for audio version of the word to enter.</label>
+	    <label index="click_here_accessible_before_link">For </label>
+	    <label index="click_here_accessible_before_link_informal">For </label>
+	    <label index="click_here_accessible_link">the audio version of the word</label>
+	    <label index="click_here_accessible_link_informal">the audio version of the word</label>
+	    <label index="click_here_accessible_after_link"> click on this link.</label>
+	    <label index="click_here_accessible_after_link_informal"> click on this link.</label>
             <label index="cant_read2">.</label>
 	    <label index="noImageMessage">Sorry, we cannot autoreload a new image. Submit the form and a new image will be loaded.</label>
 	    <label index="noPlayMessage">Sorry, we cannot play the word of the image.</label>
@@ -67,8 +73,14 @@
             <label index="cant_read1_informal">Si tu ne peux pas lire toutes les lettres ou chiffres,</label>
             <label index="click_here">cliquez ici</label>
             <label index="click_here_informal">clique ici</label>
-	    <label index="click_here_accessible">Cliquez ici pour une version audio du mot ou du nombre à entrer</label>
-	    <label index="click_here_accessible_informal">Clique ici pour une version audio du mot ou du nombre à entrer</label>
+	    <label index="click_here_accessible">Cliquez ici pour une version audio du mot ou du nombre à entrer.</label>
+	    <label index="click_here_accessible_informal">Clique ici pour une version audio du mot ou du nombre à entrer.</label>
+	    <label index="click_here_accessible_before_link">Cliquez sur ce lien pour une </label>
+	    <label index="click_here_accessible_before_link_informal">Cliquez sur ce lien pour une </label>
+	    <label index="click_here_accessible_link">version audio du mot ou du nombre</label>
+	    <label index="click_here_accessible_link_informal">version audio du mot ou du nombre</label>
+	    <label index="click_here_accessible_after_link"> à entrer.</label>
+	    <label index="click_here_accessible_after_link_informal"> à entrer.</label>
             <label index="cant_read2">.</label>
 	    <label index="noImageMessage">Désolé, nous ne pouvons présenter une nouvelle image. Envoyez le formulaire et une nouvelle image sera présentée.</label>
 	    <label index="noImageMessage_informal">Désolé, nous ne pouvons présenter une nouvelle image. Envoie le formulaire et une nouvelle image sera présentée.</label>
